--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
   id 'kotlin-android'
 }
 
+apply plugin: 'kotlin-kapt'
+
 android {
   compileSdkVersion 30
   buildToolsVersion "30.0.3"
@@ -37,7 +39,6 @@ android {
 }
 
 dependencies {
-
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation 'androidx.core:core-ktx:1.6.0'
   implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -49,6 +50,11 @@ dependencies {
   implementation 'org.koin:koin-android:2.2.0'
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
   implementation 'org.koin:koin-android:2.2.0'
+
+  implementation "androidx.room:room-runtime:2.3.0"
+  kapt "androidx.room:room-compiler:2.3.0"
+  implementation "androidx.room:room-ktx:2.3.0"
+  kapt "android.arch.persistence.room:compiler:1.1.1"
 
   testImplementation 'junit:junit:4.+'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
